media/invidious/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invidious
  namespace: media
spec:
  selector:
    app: invidious
  ports:
  - name: invidious
    port: 3000
